[project]
name = "hass-wakatime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = []

[dependency-groups]
dev = [
    "home-assistant-frontend==20251203.3",
    "homeassistant==2025.12.5",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
